cfn_benchmark/cfn_templates/ZoccoCss__kalisoc/KaliPurple-VPC.yml
AWSTemplateFormatVersion: 2010-09-09
Description: This template creates a VPC with it's subnets for the Kali Linux Purple SOC Lab.
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: VPC CIDR
        Parameters:
          - KaliVPCNetCIDR
      - Label:
          default: Kali Subnet CIDR
        Parameters:
          - PublicSubnetCIDR
          - LANSubnetCIDR
          - SOCSubnetCIDR
      - Label:
          default: SSH
        Parameters:
          - SSHLocation

Parameters:
  SSHLocation:
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
    Default: 0.0.0.0/0
    Description: The IP address range that can be used to access the web server using SSH.
    MaxLength: '18'
    MinLength: '9'
    Type: String
  KaliVPCNetCIDR:
    Default: 192.168.0.0/16
    Description: Please Enter the IP Range of the VPC
    Type: String
  PublicSubnetCIDR:
    Default: 192.168.0.0/24
    Description: Please Enter the IP Range of the Public Subnet
    Type: String
  LANSubnetCIDR:
    Default: 192.168.1.0/24
    Description: Please Enter the IP Range of the LAN Subnet
    Type: String
  SOCSubnetCIDR:
    Default: 192.168.253.0/24
    Description: Please Enter the IP Range of the SOC Subnet
    Type: String

Resources:
  KaliVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref KaliVPCNetCIDR
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: Kali VPC | KaliVPC

  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: !Ref PublicSubnetCIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Kali VPC | Public Subnet
      VpcId: !Ref KaliVPC

  LANSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: !Ref LANSubnetCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Kali VPC | LAN Subnet
      VpcId: !Ref KaliVPC

  SOCSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      CidrBlock: !Ref SOCSubnetCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Kali VPC | SOC Subnet
      VpcId: !Ref KaliVPC

  IGW:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: Kali VPC | InternetGateway

  IGWAttacment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref KaliVPC
      InternetGatewayId: !Ref IGW

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      Tags:
        - Key: Name
          Value: Kali VPC | PublicRouteTable
      VpcId: !Ref KaliVPC

  PublicRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  OpenSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Open Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 9443
          ToPort: 9443
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 9392
          ToPort: 9392
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 5601
          ToPort: 5601
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 8443
          ToPort: 8443
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 25
          ToPort: 25
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 110
          ToPort: 110
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 143
          ToPort: 143
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 465
          ToPort: 465
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 587
          ToPort: 587
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 993
          ToPort: 993
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 995
          ToPort: 995
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 9200
          ToPort: 9200
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 8220
          ToPort: 8220
          CidrIp: !Ref SSHLocation
        - IpProtocol: udp
          FromPort: 1194
          ToPort: 1194
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 24
          ToPort: 24
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 873
          ToPort: 873
          CidrIp: !Ref SSHLocation
      Tags:
        - Key: Name
          Value: Open Security Group
      VpcId: !Ref KaliVPC

  LANNI:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      Description: Bizantium Network Interface for LAN
      SourceDestCheck: false
      SubnetId: !Ref LANSubnet
      GroupSet:
        - !Ref OpenSecurityGroup
      PrivateIpAddress: 192.168.1.10
      Tags:
        - Key: Name
          Value: Kali SOC | Bizantium LAN Network Interface

  SOCNI:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      Description: Bizantium Network Interface for SOC
      SourceDestCheck: false
      SubnetId: !Ref SOCSubnet
      GroupSet:
        - !Ref OpenSecurityGroup
      PrivateIpAddress: 192.168.253.101
      Tags:
        - Key: Name
          Value: Kali SOC | Bizantium SOC Network Interface

  HelioNI:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      Description: Heliotrope Network Interface for LAN
      SourceDestCheck: false
      SubnetId: !Ref LANSubnet
      GroupSet:
        - !Ref OpenSecurityGroup
      PrivateIpAddress: 192.168.1.20
      Tags:
        - Key: Name
          Value: Kali SOC | Heliotrope LAN Network Interface

  PurpleNI:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      Description: Kali-Purple Network Interface for SOC
      SourceDestCheck: false
      SubnetId: !Ref SOCSubnet
      GroupSet:
        - !Ref OpenSecurityGroup
      PrivateIpAddress: 192.168.253.105
      Tags:
        - Key: Name
          Value: Kali SOC | Kali-Purple SOC Network Interface

  VioletNI:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      Description: Kali-Violet Network Interface for SOC
      SourceDestCheck: false
      SubnetId: !Ref SOCSubnet
      GroupSet:
        - !Ref OpenSecurityGroup
      PrivateIpAddress: 192.168.253.107
      Tags:
        - Key: Name
          Value: Kali SOC | Kali-Violet SOC Network Interface

  EminenceNI:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      Description: Eminence Network Interface for SOC
      SourceDestCheck: false
      SubnetId: !Ref SOCSubnet
      GroupSet:
        - !Ref OpenSecurityGroup
      PrivateIpAddress: 192.168.253.103
      Tags:
        - Key: Name
          Value: Kali SOC | Eminence SOC Network Interface

Outputs:
  KaliVPC:
    Description: KaliVPC ID
    Export:
      Name: !Sub '${AWS::StackName}-VPC'
    Value: !Ref KaliVPC
  PublicSubnet:
    Description: Public ID
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnet'
    Value: !Ref PublicSubnet
  LANSubnet:
    Description: LANSubnet ID
    Export:
      Name: !Sub '${AWS::StackName}-LANSubnet'
    Value: !Ref LANSubnet
  SOCSubnet:
    Description: Public ID
    Export:
      Name: !Sub '${AWS::StackName}-SOCSubnet'
    Value: !Ref SOCSubnet
  LANNI:
    Description: Network Interface for LAN
    Export:
      Name: !Sub '${AWS::StackName}-LANNI'
    Value: !Ref LANNI
  SOCNI:
    Description: Network Interface for SOC
    Export:
      Name: !Sub '${AWS::StackName}-SOCNI'
    Value: !Ref SOCNI
  HelioNI:
    Description: Network Interface for Heliotrope
    Export:
      Name: !Sub '${AWS::StackName}-HelioNI'
    Value: !Ref HelioNI
  PurpleNI:
    Description: Network Interface for Kali-Purple
    Export:
      Name: !Sub '${AWS::StackName}-PurpleNI'
    Value: !Ref PurpleNI
  VioletNI:
    Description: Network Interface for Kali-Violet
    Export:
      Name: !Sub '${AWS::StackName}-VioletNI'
    Value: !Ref VioletNI
  EminenceNI:
    Description: Network Interface for Kali-Eminence
    Export:
      Name: !Sub '${AWS::StackName}-EminenceNI'
    Value: !Ref EminenceNI
  OpenSecurityGroup:
    Description: OpenSecurityGroup ID
    Export:
      Name: !Sub '${AWS::StackName}-OpenSecurityGroup'
    Value: !Ref OpenSecurityGroup
